Update PropertySnapshotManager